# libjlmuesli

./: .JuliaFormatter.toml  .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_docker_image.yml  build_muesli_wrapper_jll.yml  check_build.yml  style.yml
cmake/: CMakeLists.txt  CPM.cmake
cmake/FormatTarget/: CMakeLists.txt
docker/: Dockerfile
docker/devcontainer-config/.devcontainer/: devcontainer.json
docker/patches/: CMakeLists.txt
include/: CMakeLists.txt
include/jlmuesli/: CMakeLists.txt
include/jlmuesli/finitestrain/: CMakeLists.txt  finitestrainbindings.hh  registerfinitestrain.hh
include/jlmuesli/smallstrain/: CMakeLists.txt  registersmallstrain.hh  smallstrainbindings.hh
include/jlmuesli/util/: CMakeLists.txt  common.hh  helpers.hh  materialstate.hh  propertynames.hh
julia/: test.jl  wrapmoduletest.jl
src/: CMakeLists.txt  finitestrain.hh  materialproperties.hh  materialstate.hh  muesli.cpp  smallstrain.hh
src/jlmuesli/: CMakeLists.txt  muesli.cpp
src/jlmuesli/finitestrain/: CMakeLists.txt  finitestrainbindings.cpp  finitestrainbindings.hh  registerfinitestrain.hh
src/jlmuesli/smallstrain/: CMakeLists.txt  registersmallstrain.hh  smallstrainbindings.cpp  smallstrainbindings.hh
src/jlmuesli/util/: CMakeLists.txt  common.hh  helpers.cpp  helpers.hh  materialstate.cpp  materialstate.hh  propertynames.cpp  propertynames.hh  tensors.cpp  tensors.hh  utils.hh
